adding auth resources and isAuthenticated middleware
