# backend/src/resources/auth/auth.types.ts
@@ -1,0 +1,3 @@
+import { User } from "@prisma/client";
+
+export type LoginUserDTO = Pick<User, "email" | "password">;
